force-app/main/default/objects/Account/fields/NF_Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>NF_Accounting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ES-25753</description>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>