force-app/main/default/objects/Account/fields/NF_PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>NF_PartnerAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ES-68530: label update</description>
    <label>Partner</label>
    <type>Checkbox</type>
</CustomField>